# icier

./: .gitignore  README.md
iced-x86/: Cargo.toml
iced-x86-js/src/: lib.rs
iced-x86/src/: decoder.rs  enums.rs  instruction_internal.rs  lib.rs
iced-x86/src/block_enc/: enums.rs
iced-x86/src/decoder/: handlers.rs
iced-x86/src/decoder/handlers/: tables.rs
iced-x86/src/decoder/table_de/: data_legacy.rs  enums.rs  evex_reader.rs  legacy_reader.rs  mod.rs  vex_reader.rs
iced-x86/src/encoder/: enums.rs  handlers_table.rs  op_code.rs  op_code_fmt.rs  op_code_handler.rs  op_code_tbl.rs  op_kind_tables.rs  ops.rs  ops_tables.rs
iced-x86/src/encoder/tests/: create.rs  mod.rs
iced-x86/src/formatter/: fmt_utils.rs  mod.rs
iced-x86/src/formatter/fast/: mem_size_tbl.rs
